--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ ehthumbs.db
 Thumbs.db
 *.log
 The_Last_Warrior/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+The_Last_Warrior/Logs/shadercompiler-UnityShaderCompiler.exe0.log
